# NMF

./: CMakeLists.txt  README.md  example_pianoRoll.txt  main.cpp  wave.c  wave.h
MFE/: MFE.c  MFE.h  _kiss_fft_guts.h  kiss_fft.c  kiss_fft.h  resample.cpp  upfirdn.h
ScoreFollowing/: ScoreFollowing.h  findPath.h  main.cpp  readData.cpp  scoreFollowingEvent.cpp
data/scoreEvent/: example.mat
data/templateData/: templatemaps.txt
results/: showDat.m
